syntax= "proto3";

package user;

service UserService{
    rpc GetAllUser(GetAllUserRequest) returns (GetAllUserResponse){}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc GetUser(GetUserRequest) returns (GetUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){}
}

message GetAllUserRequest{

}

message GetAllUserResponse{
    repeated User users =1;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserRequest{
    string name = 1;
    string email = 2;
}

message CreateUserResponse{
    string name = 1;
    string email = 2;
}

message GetUserRequest{
    int32 id = 1;
}

message GetUserResponse{
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserResponse {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message DeleteUserRequest{
    int32 id = 1;
}

message DeleteUserResponse{
    int32 id = 1;
    string name = 2;
    string email = 3;
}